# ConsoleCore

./: .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/: copilot-instructions.md
.github/workflows/: macos-build.yml
apps/ConsoleCoreStandalone/: CMakeLists.txt
apps/ConsoleCoreStandalone/Source/: MainComponent.h
automation_snapshots/: example_snapshots.json
capture_templates/: studio_capture_template.json
console_profiles/generic/: American_Discrete_OpAmp.json  British_ClassA_Discrete.json  British_VCA_Large_Format.json  EMI_Inspired_Tube_Desk.json  Flickinger_Inspired_Discrete.json  German_Tube_Broadcast.json
datasets/: example_dataset_manifest.json
docs/: AI_MODELING_STRATEGY.md  ANALOG_CAPTURE_WORKFLOW.md  AU_BRIDGE_IMPLEMENTATION_SPEC.md  CAPTURE_PROTOCOL.md  COMMERCIAL_DEPLOYMENT_PLAN.md  COPILOT_MASTER_PROMPT_FINAL.md  COPILOT_MILESTONE2_PROMPT.md  COPILOT_MILESTONE_C_PROMPT.md  COPILOT_MILESTONE_D_PROMPT.md  COPILOT_MILESTONE_E_PROMPT.md  COPILOT_MILESTONE_F_PROMPT.md  COPILOT_MILESTONE_G_PROMPT.md  COPILOT_MILESTONE_H_PROMPT.md  COPILOT_MILESTONE_I_PROMPT.md  COPILOT_MILESTONE_J_PROMPT.md  COPILOT_MILESTONE_K_PROMPT.md  COPILOT_MILESTONE_L_PROMPT.md  COPILOT_MILESTONE_M_PROMPT.md  COPILOT_PHASE0_PROMPT.md  COPILOT_PHASE2_PROMPT.md  COPILOT_PHASE3_PROMPT.md  COPILOT_PHASE4_PROMPT.md  COPILOT_PHASE5_PROMPT.md  COPILOT_TAPECORE_INTEGRATION_PROMPT.md  DAW_INTEGRATION_MATRIX.md  DISTRIBUTED_PROCESSING_STRATEGY.md  FINAL_AUDIO_PATH.md  FINAL_GIT_CHECKPOINT.md  FINAL_MILESTONE_ROADMAP.md  FUTURE_PLUGIN_PLAN.md  GIT_CHECKPOINT_MILESTONE2.md  GIT_CHECKPOINT_TAPECORE_INTEGRATION.md  GIT_STRATEGY.md  HARDWARE_ROADMAP.md  LOOPBACK_PROFILE_DESIGN.md  LUNA_LOOPBACK_SETUP.md  MASTER_IMPLEMENTATION_STRATEGY.md  METAL_ACCELERATION_PLAN.md  MILESTONE2_SPEC.md  MILESTONE_C_GIT_CHECKPOINT.md  (+42 more)
latency_profiles/: example_LUNA_48k_256.json
modules/advanced_analog/: CMakeLists.txt  DynamicImpedanceModel.cpp  DynamicImpedanceModel.h  MicroInstabilityModel.cpp  MicroInstabilityModel.h  ThermalDriftModel.cpp  ThermalDriftModel.h
modules/ai/: AdaptiveConsoleMatcher.cpp  AdaptiveConsoleMatcher.h  CMakeLists.txt  DatasetManager.cpp  DatasetManager.h  FeatureVector.h  InferenceProvider.h  SessionFingerprint.h  SimilarityScorer.cpp  SimilarityScorer.h  TelemetryCapture.cpp  TelemetryCapture.h
modules/analog_physics/: AdaptiveHeadroomModel.cpp  AdaptiveHeadroomModel.h  AnalogPhysicsCore.cpp  AnalogPhysicsCore.h  AnalogPhysicsParameters.h  CMakeLists.txt  DspUtils.h  DynamicCrosstalkMatrix.cpp  DynamicCrosstalkMatrix.h  RailPhysicsEngine.cpp  RailPhysicsEngine.h  SpectralLoadAnalyzer.cpp  SpectralLoadAnalyzer.h  TemporalMemoryEngine.cpp  TemporalMemoryEngine.h  TransformerHysteresisModel.cpp  TransformerHysteresisModel.h
modules/automation/: CMakeLists.txt  ConsoleSnapshot.h
modules/console_core/: CMakeLists.txt
modules/console_profiles/: ConsoleProfile.json
modules/control/: CMakeLists.txt  MeterBridgeState.h  MidiControlMapping.h  OscRemoteMapping.h  RemoteConsoleSession.h  StreamDeckAction.h  VirtualConsoleStrip.h
modules/dsp_runtime/: CMakeLists.txt  MultibandPhysicsRouter.cpp  MultibandPhysicsRouter.h  OversamplingManager.cpp  OversamplingManager.h
modules/hardware/: AnalogCaptureSession.h  CMakeLists.txt  ConverterCalibrationProfile.h  HardwareDevice.h  MeasurementPass.h  PatchChainDefinition.h  RealtimeHardwareTelemetry.h
modules/integration/: AnalogPathSettings.h  CMakeLists.txt  IntegratedAnalogPathEngine.cpp  IntegratedAnalogPathEngine.h  ProductionDspEngine.cpp  ProductionDspEngine.h
modules/ipc/: SharedChannelRegistry.h  SharedRailState.h
modules/latency/: CMakeLists.txt  LatencyCalibration.h  LatencyCalibrationIO.cpp  LatencyCalibrationIO.h
modules/model_capture/: CMakeLists.txt  CaptureSession.h  CaptureSessionIO.cpp  CaptureSessionIO.h  ExtractedFeatures.h  FeatureExtractor.cpp  FeatureExtractor.h  ModelFitter.cpp  ModelFitter.h  ProfileValidator.cpp  ProfileValidator.h  TestSignalGenerator.cpp  TestSignalGenerator.h
modules/morphing/: AdaptiveResponseEngine.cpp  AdaptiveResponseEngine.h  CMakeLists.txt  ConsoleMorphTarget.h  ParameterInterpolator.cpp  ParameterInterpolator.h  SessionStateFingerprint.h  TemporalSceneEvolution.cpp  TemporalSceneEvolution.h
modules/network/: CMakeLists.txt  CapabilityRegistry.cpp  CapabilityRegistry.h  ClusterTopology.cpp  ClusterTopology.h  DistributedRenderTask.h  DspNode.h  NodeTelemetry.h  RemoteTelemetryAggregator.cpp  RemoteTelemetryAggregator.h
modules/osc/: CMakeLists.txt  OscSyncManager.cpp  OscSyncManager.h
modules/performance/: CMakeLists.txt  (+4 more)
routing_profiles/: Atmos_7_1_4_Profile.json  Generic_16_Stem_Console.json  LUNA_8_Stem_Console.json
scripts/: build_ai_profile_cli.sh  build_all_validation_targets.sh  build_control_surface_cli.sh  build_distributed_cluster_cli.sh  build_final_validation_clis.sh  build_hardware_capture_cli.sh  build_model_capture_cli.sh  build_morphing_console_cli.sh  build_offline_physics_test.sh  build_performance_runtime_cli.sh  build_production_dsp_cli.sh  build_productization_cli.sh  build_realtime_validation_cli.sh  build_runtime_profile_cli.sh  build_spatial_console_cli.sh  build_tapecore_integration_cli.sh
tape_profiles/: Generic_2Inch_24Track_15ips.json  Generic_2Inch_24Track_30ips.json  Generic_HalfInch_2Track_Print_30ips.json
tests/: CMakeLists.txt  smoke_test.cpp
tools/ai_profile_cli/: CMakeLists.txt  main.cpp
tools/control_surface_cli/: CMakeLists.txt  main.cpp
tools/distributed_cluster_cli/: CMakeLists.txt  main.cpp
tools/model_capture_cli/: CMakeLists.txt  main.cpp
tools/morphing_console_cli/: CMakeLists.txt  main.cpp
tools/offline_physics_test/: CMakeLists.txt  main.cpp
tools/performance_runtime_cli/: CMakeLists.txt  main.cpp
tools/production_dsp_cli/: CMakeLists.txt  main.cpp
tools/realtime_validation_cli/: CMakeLists.txt  main.cpp
tools/runtime_profile_cli/: CMakeLists.txt  main.cpp
tools/spatial_console_cli/: CMakeLists.txt  main.cpp
tools/tapecore_integration_cli/: CMakeLists.txt  main.cpp
(+127 files in other folders)
